syntax = "proto3";

package knowledgebase_service;

import "google/protobuf/empty.proto";

option go_package = "gitlab.ai-yuanjing.cn/ai-platform-private/backend-used-bff/common-api/api/proto/knowledgebase-service";

service KnowledgeBaseService {
  // 获取知识库列表
  rpc SelectKnowledgeList(KnowledgeSelectReq) returns (KnowledgeSelectListResp) {}
  // 获取知识库列表
  rpc SelectKnowledgeListByIdList(BatchKnowledgeSelectReq) returns (KnowledgeSelectListResp) {}
  // 获取知识库详情
  rpc SelectKnowledgeDetailById(KnowledgeDetailSelectReq) returns (KnowledgeInfo) {}
  // 获取知识库详情列表
  rpc SelectKnowledgeDetailByIdList(KnowledgeDetailSelectListReq) returns (KnowledgeDetailSelectListResp) {}
  // 获取知识库详情
  rpc SelectKnowledgeDetailByName(KnowledgeDetailSelectReq) returns (KnowledgeInfo) {}
  // 新增知识库
  rpc CreateKnowledge(CreateKnowledgeReq) returns (CreateKnowledgeResp) {}
  // 修改知识库
  rpc UpdateKnowledge(UpdateKnowledgeReq) returns (google.protobuf.Empty) {}
  // 删除文档知识分类
  rpc DeleteKnowledge(DeleteKnowledgeReq) returns (google.protobuf.Empty) {}
  // 知识库命中测试
  rpc KnowledgeHit(KnowledgeHitReq) returns (KnowledgeHitResp) {}
  // 获取知识库元数据（key + type）
  rpc GetKnowledgeMetaSelect(SelectKnowledgeMetaReq) returns (SelectKnowledgeMetaResp) {}
  // 获取知识库元数据值列表 (合并过的value)
  rpc GetKnowledgeMetaValueList(KnowledgeMetaValueListReq) returns (KnowledgeMetaValueListResp) {}
  // 更新知识库元数据值列表
  rpc UpdateKnowledgeMetaValue(UpdateKnowledgeMetaValueReq) returns (google.protobuf.Empty) {}
  // 修改知识库状态
  rpc UpdateKnowledgeStatus(UpdateKnowledgeStatusReq) returns (google.protobuf.Empty) {}
  // 获取知识图谱详情
  rpc GetKnowledgeGraph(KnowledgeGraphReq) returns (KnowledgeGraphResp){}
  // 获取导出记录列表
  rpc GetExportRecordList(GetExportRecordListReq) returns (GetExportRecordListResp) {}
  // 删除导出记录
  rpc DeleteExportRecord(DeleteExportRecordReq) returns (google.protobuf.Empty) {}

  // 获取外部知识库API列表
  rpc SelectKnowledgeExternalAPIList(KnowledgeExternalAPIListSelectReq) returns (KnowledgeExternalAPISelectListResp) {}
  // 获取外部知识库API详情
  rpc SelectKnowledgeExternalAPIInfo(KnowledgeExternalAPIInfoSelectReq) returns (KnowledgeExternalAPIInfo) {}
  // 新增外部知识库API
  rpc CreateKnowledgeExternalAPI(CreateKnowledgeExternalAPIReq) returns (CreateKnowledgeExternalAPIResp) {}
  // 修改外部知识库API
  rpc UpdateKnowledgeExternalAPI(UpdateKnowledgeExternalAPIReq) returns (google.protobuf.Empty) {}
  // 删除外部知识库API
  rpc DeleteKnowledgeExternalAPI(DeleteKnowledgeExternalAPIReq) returns (google.protobuf.Empty) {}

  // 获取外部知识库列表
  rpc SelectKnowledgeExternalList(KnowledgeExternalListSelectReq) returns (KnowledgeExternalSelectListResp) {}
  // 获取外部知识库详情
  rpc SelectKnowledgeExternalInfo(KnowledgeExternalInfoSelectReq) returns (KnowledgeExternalInfo) {}
  // 新增外部知识库
  rpc CreateKnowledgeExternal(CreateKnowledgeExternalReq) returns (CreateKnowledgeExternalResp) {}
  // 修改外部知识库
  rpc UpdateKnowledgeExternal(UpdateKnowledgeExternalReq) returns (google.protobuf.Empty) {}
  // 删除外部知识库
  rpc DeleteKnowledgeExternal(DeleteKnowledgeExternalReq) returns (google.protobuf.Empty) {}
}

message DeleteKnowledgeReq{
  string knowledgeId = 1;
  string userId = 2;
  string orgId = 3;
}

message UpdateKnowledgeReq{
  string knowledgeId = 1;
  string name = 2;
  string description = 3;
  string userId = 4;
  string orgId = 5;
}

message UpdateKnowledgeStatusReq{
  string knowledgeId = 1;
  int32 reportStatus = 2;
}

message KnowledgeHitReq{
  string orgId = 1;
  string userId = 2;
  string question = 3; //问题
  repeated KnowledgeParams knowledgeList = 4;//元数据相关参数
  KnowledgeMatchParams knowledgeMatchParams = 5; //模型匹配方式
  repeated DocFileInfo docInfoList = 6; //上传文档列表
}

message DocFileInfo {
  string docName = 1;  //文档名称
  string docUrl = 2;  //文档url
  string docType = 3; // 文档类型
  string docId = 4;//文档id
  int64 docSize = 5;//文档大小
}

message KnowledgeMatchParams{
  string matchType = 1; //matchType：vector（向量检索）、text（文本检索）、mix（混合检索：向量+文本）
  string rerankModelId = 2;//rerank模型id
  int32 priorityMatch = 3;// 权重匹配，只有在混合检索模式下，选择权重设置后，这个才设置为1
  float semanticsPriority = 4;// 语义权重
  float keywordPriority = 5;// 关键词权重
  int32 topK = 6;//topK 获取最高的几行
  float score = 7;//score 过滤分数阈值
  float termWeight = 8; // 关键词系数
  bool termWeightEnable = 9; // 关键词系数开关
  bool useGraph = 10; // 是否使用知识图谱
}

message KnowledgeParams{
  string knowledgeId = 1; // 知识库id
  MetaDataFilterParams metaDataFilterParams = 2; // 元数据过滤参数
}

message MetaDataFilterParams{
  bool filterEnable = 1; // 元数据过滤开关
  string filterLogicType = 2; // 元数据过滤逻辑类型
  repeated MetaFilterParams metaFilterParams = 3; // 元数据过滤参数
}

message MetaFilterParams{
  string key = 1; // 元数据key
  string type = 2; // 元数据类型
  string value = 3; // 元数据值
  string condition = 4; // 元数据过滤条件
}

message CreateKnowledgeReq{
  string userId = 1;
  string orgId = 2;
  string name = 3;
  string description = 4;
  EmbeddingModelInfo embeddingModelInfo = 5;
  KnowledgeGraph knowledgeGraph = 6; //知识图谱配置
  int32 category = 7; //分类信息，0:知识库，1：问答库，2：多模态知识库
}

message EmbeddingModelInfo{
  string modelId = 1;
}

message KnowledgeGraph {
  bool switch = 1; //知识图谱开关
  string llmModelId = 2;//大模型id
  string schemaUrl = 3; //知识图谱schema文件地址
}

message CreateKnowledgeResp{
  string knowledgeId = 1;
}

message KnowledgeSelectReq {
  string userId = 1;
  string orgId = 2;
  string name = 3; //知识库名称，支持模糊搜索
  repeated string tagIdList = 4; //知识库id 列表
  int32 category = 5; //分类信息，0:知识库，1：问答库
  int32 external = 6; //外部知识库标识，0:知识库，1:外部知识库
}

message BatchKnowledgeSelectReq {
  string userId = 1;
  string orgId = 2;
  repeated string knowledgeIdList = 3; //知识库id列表
}

message KnowledgeSelectListResp {
  repeated KnowledgeInfo knowledgeList = 1; //知识库列表
}

message KnowledgeDetailSelectReq {
  string userId = 1;
  string orgId = 2;
  string knowledgeId = 3; //知识库id
  string knowledgeName = 4; // 知识库名称
}

message KnowledgeDetailSelectListReq{
  string userId = 1;
  string orgId = 2;
  repeated string knowledgeIds = 3; //知识库id列表
}

message KnowledgeDetailSelectListResp{
  repeated KnowledgeInfo list = 1; // 知识库详情列表
  int32 total = 2;
}

// 知识库信息
message KnowledgeInfo {
  string knowledgeId = 1; //知识库id
  string name = 2; //知识库名称
  int32 docCount = 3;
  string description = 4;
  EmbeddingModelInfo embeddingModelInfo = 5;
  repeated KnowledgeTagInfo knowledgeTagInfoList = 6;
  string createdAt = 7;
  int32 permissionType = 8; // 权限类型:0: 查看权限; 10: 编辑权限; 20: 授权权限,数值不连续的原因防止后续有中间权限，目前逻辑 授权权限>编辑权限>查看权限
  string createUserId = 9;//创建者id
  string createOrgId = 10;//创建者组织id
  int32 shareCount = 11;//共享数量
  string ragName = 12;//传给rag的知识库名称
  int32 graphSwitch = 13; //知识图谱开关
  int32 category = 14; // 0:知识库 1:问答库 2: 多模态知识库
  string llmModelId = 15; // 知识图谱-大模型id
  string updatedAt = 16; // 更新时间
  int32 external = 17; //0:知识库 1:外部知识库
  KnowledgeExternalInfo knowledgeExternalInfo = 18; // 外部知识库信息
}

message KnowledgeTagInfo {
  string tagId = 1;//知识库标签id
  string tagName = 2; //知识库标签名称
}

message KnowledgeMetaData{
  string metaId = 1;
  string key = 2;// key
  string type = 3; // type(time, string, number)
  string value = 4;
}

message KnowledgeHitResp{
  string prompt = 1;
  repeated double score = 2;
  repeated KnowledgeSearchInfo searchList = 3;
  bool useGraph = 4;
}

message KnowledgeSearchInfo{
  string title = 1;
  string snippet = 2;
  string knowledgeName = 3;
  repeated ChildContent childContentList = 4;
  repeated float childScore = 5;
  string contentType = 6; // graph：知识图谱（文本）, text：文档分段（文本）, community_report：社区报告（markdown）
  float score = 7;
  repeated RerankInfo rerankInfo = 8;
}

message RerankInfo{
  string type = 1;
  string fileUrl = 2;
  float score = 3;
}


message ChildContent{
  string childSnippet = 1;
  float score = 2;
}

message SelectKnowledgeMetaReq{
  string userId = 1;
  string orgId = 2;
  string knowledgeId = 3;
}

message SelectKnowledgeMetaResp{
  repeated KnowledgeMetaData metaList = 1;
}

message KnowledgeMetaValueListReq{
  string userId = 1;
  string orgId = 2;
  repeated string docIdList = 3;
}

message KnowledgeMetaValueListResp{
  repeated KnowledgeMetaValues metaList = 1;
}

message KnowledgeMetaValues{
  string metaId = 1;
  string key = 2;// key
  string type = 3; // type(time, string, number)
  repeated string valueList = 4;
}

message UpdateKnowledgeMetaValueReq{
  string userId = 1;
  string orgId = 2;
  bool applyToSelected = 3;
  repeated string docIdList = 4;
  repeated MetaValueOperation metaList = 5;
  string knowledgeId = 6;
}

message MetaValueOperation{
  KnowledgeMetaData metaInfo = 1;
  string option = 2; // add, delete, update
}

message KnowledgeGraphReq{
  string userId = 1;
  string orgId = 2;
  string knowledgeId = 3;
}

message KnowledgeGraphResp{
  int32 processingCount = 1;
  int32 successCount = 2;
  int32 failedCount = 3;
  int32 total = 4;
  string schema = 5;
}

message GetExportRecordListReq{
  string knowledgeId = 1;//问答库id
  string userId = 2;
  string orgId = 3;
  int32 pageSize = 4;
  int32 pageNum = 5;
}

message GetExportRecordListResp{
  int64 total = 1;
  int32 pageNum = 2;
  int32 pageSize = 3;
  repeated ExportRecordInfo exportRecordInfos = 4;
}

message ExportRecordInfo{
  string exportRecordId = 1;//导出记录id
  string author = 2; //导出人
  int32 status = 3; //导出状态
  string filePath = 4; //导出文件路径
  string errorMsg = 5; //错误信息
  string exportTime =6; //导出时间
  string userId = 7;
  string knowledgeName = 8;
}

message DeleteExportRecordReq{
  string exportRecordId = 1;//导出记录id
  string userId = 2;
  string orgId = 3;
}

message CreateKnowledgeExternalAPIReq{
  string userId = 1;
  string orgId = 2;
  string name = 3;
  string description = 4;
  string baseUrl = 5;
  string apiKey = 6;
}

message CreateKnowledgeExternalAPIResp{
  string externalAPIId = 1;
}

message UpdateKnowledgeExternalAPIReq{
  string userId = 1;
  string orgId = 2;
  string externalAPIId = 3;
  string name = 4;
  string description = 5;
  string baseUrl = 6;
  string apiKey = 7;
}

message DeleteKnowledgeExternalAPIReq{
  string userId = 1;
  string orgId = 2;
  string externalAPIId = 3;
}

message KnowledgeExternalAPIListSelectReq {
  string userId = 1;
  string orgId = 2;
  repeated string externalAPIIds = 3;
}

message KnowledgeExternalAPIInfoSelectReq {
  string userId = 1;
  string orgId = 2;
  string externalAPIId = 3;
}

message KnowledgeExternalAPIInfo{
  string userId = 1;
  string orgId = 2;
  string externalAPIId = 3;
  string name = 4;
  string description = 5;
  string baseUrl = 6;
  string apiKey = 7;
}

message KnowledgeExternalAPISelectListResp{
  repeated KnowledgeExternalAPIInfo externalAPIList = 1;
}

message CreateKnowledgeExternalReq{
  string userId = 1;
  string orgId = 2;
  string name = 3;
  string description = 4;
  string provider = 5;
  string externalApiId = 6;
  string externalKnowledgeId = 7;
}

message CreateKnowledgeExternalResp{
  string knowledgeId = 1;
}

message UpdateKnowledgeExternalReq{
  string userId = 1;
  string orgId = 2;
  string knowledgeId = 3;
  string name = 4;
  string description = 5;
  string provider = 6;
  string externalApiId = 7;
  string externalKnowledgeId = 8;
}

message DeleteKnowledgeExternalReq{
  string userId = 1;
  string orgId = 2;
  string knowledgeId = 3;
}

message KnowledgeExternalListSelectReq {
  string userId = 1;
  string orgId = 2;
  string externalAPIId = 3;
}

message KnowledgeExternalInfoSelectReq {
  string userId = 1;
  string orgId = 2;
  string knowledgeId = 3;
}

message KnowledgeExternalInfo{
  string userId = 1;
  string orgId = 2;
  string externalKnowledgeId = 3;
  string externalKnowledgeName = 4;
  string externalAPIId = 5;
  string externalAPIName = 6;
  string externalAPIUrl = 7;
  string externalAPIKey = 8;
  string provider = 9;
  int64  docCount = 10;
  RetrievalModelInfo retrievalModelInfo = 11;

}

message RetrievalModelInfo{
  string searchMethod = 1;
  bool rerankingEnable = 2;
  string rerankingMode = 3;
  RerankingModel rerankingModel = 4;
  Weights weights = 5;
  int64 topK = 6;
  bool  scoreThresholdEnabled = 7;
  float scoreThreshold = 8;
}

message Weights{
  string weightType = 1;
  KeywordSetting keywordSetting = 2;
  VectorSetting vectorSetting = 3;
}

message KeywordSetting {
  float keywordWeight =1;
}

message VectorSetting {
  float vectorWeight = 1;
  string embeddingModelName = 2;
  string embeddingProviderName = 3;
}

message RerankingModel{
  string rerankingProviderName = 1;
  string rerankingModelName = 2;
}

message KnowledgeExternalSelectListResp{
  repeated KnowledgeExternalInfo externalKnowledgeList = 1;
}